# TheCoalitionRace

./: CMakeLists.txt  makefile
include/: Agent.h  Graph.h  JoinPolicy.h  MandatesJoinPolicy.h  Offer.h  Parser.h  Party.h  SelectionPolicy.h  Simulation.h
source/: Agent.cpp  Graph.cpp  Party.cpp  Simulation.cpp
src/: Agent.cpp  EdgeWeightSelectionPolicy.cpp  Graph.cpp  JoinPolicy.cpp  LastOfferJoinPolicy.cpp  MandatesJoinPolicy.cpp  MandatesSelectionPolicy.cpp  Offer.cpp  Parser.cpp  Party.cpp  SelectionPolicy.cpp  Simulation.cpp  main.cpp  test.cpp
tests/: 01.out
